# GNN-TGAT-NIDS

./: .gitignore  README.md  attack.py  pyproject.toml  train.py
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/routers/: adversarial.py  analysis.py  report.py
app/services/: cpgd_service.py  graph_builder.py  inference.py  report_builder.py
app/templates/: report.html.j2
configs/: base.yaml  run_attack.yaml  static_pipeline.yaml  train.yaml
configs/attack/: cpgd.yaml  edge_injection.yaml  gan.yaml
configs/data/: static_default.yaml  temporal_default.yaml
configs/eval/: full_matrix.yaml
configs/model/: gat.yaml  graphsage.yaml  tgat.yaml  tgn.yaml
data/demo/: demo_flows.csv
docs/: architecture-review.md  model_compare.md  spec.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts  index.ts
frontend/src/router/: index.ts
frontend/src/stores/: session.ts
frontend/src/views/: AdversarialReport.vue  AlertList.vue  AttackTimeline.vue  ReliabilityPanel.vue  TrafficGraph.vue  UploadView.vue
scripts/: compute_reliability_metrics.py  create_demo_dataset.py  tune_hyperparams.py
src/attack/: __init__.py  base.py  constraints.py  cpgd.py
src/data/: __init__.py  loader.py  static_builder.py  static_dataset.py  temporal_builder.py
src/eval/: losses.py  metrics.py
src/models/: base.py  gat.py  graphsage.py  tgn.py
src/utils/: checkpoint.py  seed.py
tests/: conftest.py  test_checkpoint.py  test_constraints.py  test_loader.py  test_models.py  test_seed.py  test_static_builder.py
