[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "gnn-tgat-nids"
version = "0.1.0"
description = "Graph-Aware Adversarial Robustness Framework for Network Intrusion Detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "torch-geometric>=2.6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.18",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "networkx>=3.3",
    "aiofiles>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "ruff>=0.6",
    "optuna>=3.6",
    "optuna-dashboard>=0.15",
]

# PyTorch CUDA wheels — non-macOS uses cu124, macOS falls back to CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cpu",   marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
